# lfmc_gym

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
common/: paths.py
dependencies/actuation_dynamics/include/actuation_dynamics/: Actuation.hpp
dependencies/networks_minimal/: CMakeLists.txt  LICENSE  README.md
dependencies/networks_minimal/include/networks_minimal/: Activation.hpp  GatedRecurrentUnit.hpp  MultiLayerPerceptron.hpp
gym_envs/anymal_pmtg_velocity_command/: Environment.hpp  cfg.yaml
gym_envs/anymal_pmtg_velocity_command/helpers/: Action.hpp  Command.hpp  Kinematics.hpp  Motion.hpp  Observation.hpp  Reward.hpp  Utility.hpp  Visualization.hpp
gym_envs/anymal_velocity_command/: Environment.hpp  cfg.yaml
gym_envs/anymal_velocity_command/helpers/: Command.hpp  Observation.hpp  Reward.hpp  Utility.hpp  Visualization.hpp
modules/: __init__.py  common.py  dense.py  helper.py
raisim_gym_torch/: LICENSE
raisim_gym_torch/algo/ppo/: distributions.py  module.py  networks.py  ppo.py  storage.py
raisim_gym_torch/env/: Common.hpp  RaisimGymEnv.hpp  RaisimGymVecEnv.py  Reward.hpp  VectorizedEnvironment.hpp  Yaml.cpp  Yaml.hpp  debug_app.cpp  raisim_gym.cpp
raisim_gym_torch/helper/: raisim_gym_helper.py
resources/models/anymal_c/: README.md
resources/models/anymal_c/urdf/: model.urdf
resources/parameters/anymal_c_actuation/: gru.txt  mlp.txt
scripts/anymal_pmtg_velocity_command/: runner.py  tester.py
scripts/anymal_velocity_command/: runner.py  tester.py
scripts/utility/: csv_to_txt_converter.py  pt_to_actor_pt_converter.py  pt_to_txt_converter.py
